# Log

./: .gitignore  CMakeLists.txt  CMakeLists_Deploy.txt  CMakeLists_Testing.txt  configure.sh
include/: check.h  fun.h  levels.h  log.h  logbacktrace.h  logentry.h  platform.h  progress.h
logsrc/: log.cpp
logsrc/logbacktrace/: logbacktrace_startTrace.cpp  logbacktrace_stopTrace.cpp
src/: template.cpp
src/log/: addStream.cpp  check.cpp  getset.cpp  log.cpp  log_progress.cpp  output.cpp  profileFunctionTime.cpp  profileProbe.cpp  profiling.cpp  setProfileStream.cpp  tryLog.cpp
src/logFunction/: logFunction.cpp
src/progress/: progress.cpp
tests/: CMakeLists.txt
tests/src/: getset.cpp  output.cpp  prerequisites.cpp  setProfileStream.cpp  streams_output.cpp  tProfileFunctionTime.cpp
